--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,12 @@
               <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
             </ul>
           </nav>
+		  
+		  <nav class="cover-navigation cover-navigation--primary">
+            <ul class="navigation">
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#CV" title="link to suthor CV" class="blog-button">CV</a></li>
+            </ul>
+          </nav>
 
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
@@ -40,7 +46,7 @@
             {% if site.author.facebook_username %}
               <!-- Facebook -->
               <li class="navigation__item">
-                <a href="http://fb.me/{{ site.author.facebook_username }}" title="{{ site.author.facebook_username }} on Facebook" target="_blank">
+                <a href="http://fb.me/{{ site.author.facebook_username }}" title="@{{ site.author.facebook_username }} on Facebook" target="_blank">
                   <i class="icon icon-social-facebook"></i>
                   <span class="label">Facebook</span>
                 </a>
@@ -50,7 +56,7 @@
             {% if site.author.linkedin_username %}
               <!-- LinkedIn -->
               <li class="navigation__item">
-                <a href="https://www.linkedin.com/in/{{ site.author.linkedin_username }}" title="{{ site.author.linkedin_username }} on LinkedIn" target="_blank">
+                <a href="https://www.linkedin.com/in/{{ site.author.linkedin_username }}" title="@{{ site.author.linkedin_username }} on LinkedIn" target="_blank">
                   <i class="icon icon-social-linkedin"></i>
                   <span class="label">LinkedIn</span>
                 </a>
@@ -60,9 +66,19 @@
             {% if site.author.github_username %}
               <!-- GitHub -->
               <li class="navigation__item">
-                <a href="https://www.github.com/{{ site.author.github_username }}" title="{{ site.author.github_username }} on GitHub" target="_blank">
+                <a href="https://www.github.com/{{ site.author.github_username }}" title="@{{ site.author.github_username }} on GitHub" target="_blank">
                   <i class="icon icon-social-github"></i>
                   <span class="label">GitHub</span>
+                </a>
+              </li>
+            {% endif 
+			
+			{% if site.author.instagram_username %}
+              <!-- GitHub -->
+              <li class="navigation__item">
+                <a href="https://www.github.com/{{ site.author.instagram_username }}" title="@{{ site.author.instagram_username }} on Instagram" target="_blank">
+                  <i class="icon icon-social-instagram"></i>
+                  <span class="label">Instagram</span>
                 </a>
               </li>
             {% endif %}
@@ -76,6 +92,8 @@
                 </a>
               </li>
             {% endif %}
+			
+			
 
             <!-- RSS -->
             <li class="navigation__item">
