--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,15 +21,11 @@
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
               <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
-            </ul>
-          </nav>
-		  
-		  <nav class="cover-navigation cover-navigation--primary">
-            <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}/#CV" title="link to suthor CV" class="blog-button">CV</a></li>
-            </ul>
-          </nav>
 
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#CV" title="link to author CV" class="blog-button">CV</a></li>
+            </ul>
+          </nav>
+		
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
 
@@ -71,12 +67,12 @@
                   <span class="label">GitHub</span>
                 </a>
               </li>
-            {% endif 
+            {% endif %}
 			
 			{% if site.author.instagram_username %}
-              <!-- GitHub -->
+              <!-- Instagram -->
               <li class="navigation__item">
-                <a href="https://www.github.com/{{ site.author.instagram_username }}" title="@{{ site.author.instagram_username }} on Instagram" target="_blank">
+                <a href="https://www.instagram.com{{ site.author.instagram_username }}" title="@{{ site.author.instagram_username }} on Instagram" target="_blank">
                   <i class="icon icon-social-instagram"></i>
                   <span class="label">Instagram</span>
                 </a>
