--- a/_includes/header.html
+++ b/_includes/header.html
@@ -72,7 +72,7 @@
 			{% if site.author.instagram_username %}
               <!-- Instagram -->
               <li class="navigation__item">
-                <a href="https://www.instagram.com{{ site.author.instagram_username }}" title="@{{ site.author.instagram_username }} on Instagram" target="_blank">
+                <a href="https://www.instagram.com/{{ site.author.instagram_username }}" title="@{{ site.author.instagram_username }} on Instagram" target="_blank">
                   <i class="icon icon-social-instagram"></i>
                   <span class="label">Instagram</span>
                 </a>
