--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
             <ul class="navigation">
               <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
 
-              <li class="navigation__item"><a href="{{ site.baseurl }}/#CV" title="link to author CV" class="blog-button">CV</a></li>
+              <!---<li class="navigation__item"><a href="{{ site.baseurl }}/#CV" title="link to author CV" class="blog-button">CV</a></li>--->
             </ul>
           </nav>
 		
