--- a/css/main.scss
+++ b/css/main.scss
@@ -57,3 +57,22 @@ pre.highlight code,
   border: 3px solid #fff;
   border-radius:100%;
 }
+
+.page-share {
+    text-align: center;
+    background: $secondary-color;
+    color: $light-color;
+    padding: 8px 15px;
+    border-radius: 5px;
+    margin: 1.5 * $spacing-unit 0;
+
+    a {
+        font-weight: 700;
+        color: #fff;
+        margin-left: 10px;
+
+        &:hover {
+            border-bottom: 1px dashed #fff;
+        }
+    }
+}
